_sass/_cv.scss
/*****************************
 * CV shared styles
 *****************************/

// Remove horizontal card padding so content aligns with page headings
.cv .card,
.publications .card {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

// Remove excess vertical padding from list items in CV
.cv .list-group-item {
  padding-top: 0.5rem;
  padding-bottom: 0.25rem;
}

// Remove Bootstrap's default table bottom margin inside CV entries
.cv table.table-cv {
  margin-bottom: 0;
}

// Date badges: sans-serif, not bold, left-aligned, no shadow
.cv span.badge {
  font-family: "Roboto", sans-serif;
  font-weight: normal;
  text-align: left;
  box-shadow: none !important;
}

// Sidebar TOC: flush with container left edge
#toc-sidebar,
#toc-sidebar ul,
#toc-sidebar li {
  padding-left: 0;
  list-style: none;
}

.col-sm-3:has(#toc-sidebar) {
  padding-left: 0;
}

// Second-line entries (institution, company): not bold
.cv h6:not(.title) {
  font-weight: normal;
}

div.container-link-button {
  margin-right: 0.5rem;
}

table.table-cv {
  background-color: transparent !important;

  td,
  th {
    padding: 1px;
    text-align: left;
  }
}

a.btncv {
  color: var(--global-text-color) !important;
  border: 1px solid var(--global-text-color) !important;
  border-radius: 0.125rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  text-decoration: none;
  font-weight: 400;
  font-size: 0.7rem;
  text-align: center;
  vertical-align: middle;
  text-transform: uppercase;
  white-space: nowrap;
}

a.btncv:hover {
  color: var(--global-theme-color) !important;
  border-color: var(--global-theme-color) !important;
  text-decoration: none !important;
}

/*****************************
 * CV TIME_TABLE styles
 *****************************/

p.location {
  font-size: 0.7rem;
  white-space: nowrap;
}

i.iconlocation {
  color: var(--global-theme-color);
  font-size: 0.8rem;
}

i.iconinstitution {
  color: var(--global-theme-color);
  font-size: 0.95rem;
  margin-right: 0.3rem;
}

i.icondepartment {
  color: var(--global-theme-color);
  font-size: 0.8rem;
  margin-right: 0.3rem;
}

table.institution {
  margin-bottom: 1rem;
}

td.department {
  font-size: 0.8rem;
}

div.container-links {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-start;
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

/*****************************
 * CV MAP styles
 *****************************/

div.container-pdf {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-start;
}

/*****************************
 * CV LIST_GROUPS styles
 *****************************/

div.list-groups {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  flex-direction: row;
  align-content: center;
}

div.list-group {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 2rem;
}

td.list-group-category {
  color: var(--global-theme-color);
  margin-bottom: 0.5rem;
}

td.list-group-category-icon {
  font-size: 0.8rem;
  color: var(--global-theme-color);
  width: 1.4rem;
  padding-right: 0.4rem;
}

td.list-group-name {
  font-size: 0.8rem;
}

td.list-group-level {
  font-size: 0.8rem;
  padding-left: 0.5rem;
}

td.list-group-school {
  font-size: 0.7rem;
  padding-left: 0.5rem;
  text-align: center;
}

p.list-group-time {
  font-size: 0.7rem;
  padding-left: 0.5rem;
}

td.list-group-link {
  padding-left: 0.5rem;
}

/*****************************
 * CV TOC styles
 *****************************/

a.anchor {
  display: block;
  position: relative;
  top: -50px;
  visibility: hidden;
}

ul.timeline {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

ul.timeline li {
  position: relative;
  min-height: 2.2rem;
  color: var(--global-text-color);
  list-style-position: inside;
}

span.badge-toc {
  color: var(--global-bg-color);
  background-color: var(--global-theme-color);
  border-radius: 0.125rem;
  padding: 0.125rem 0.5rem 0.125rem 0.5rem;
  font-weight: 700 !important;
  display: inline-block;
  inline-size: fit-content;
}

ul.timeline li::before {
  content: "";
  min-height: 2.5rem;
  width: 1px;
  background: var(--global-text-color);
  margin: 0;
  padding: 0;
  position: absolute;
  left: 2px;
  top: -0.5rem;
}

/*ul.timeline::before {
     content: "●";
     font-size: 1em;
     display: inline-block;
     margin: 0;
     padding: 0;
     position: relative;
     left: -2px;
     top: 0.4rem;
     color: var(--global-text-color);
}
 ul.timeline::after {
     content: "●";
     font-size: 1em;
     display: inline-block;
     margin: 0;
     padding: 0;
     position: relative;
     left: -2px;
     top: -1rem;
     color: var(--global-text-color);
}
*/

